--- a/lang/ar.json
+++ b/lang/ar.json
@@ -143,7 +143,7 @@
     "contact-section": {
       "head-fix": "ابقى على اتصال",
       "desc": "!هل لديك أسئلة؟ تواصل معنا مباشرة عبر شبكاتنا الاجتماعية",
-      "back-button": "الرجوع إلى الصفحة الرئيسية",
+      "backButton": "الرجوع إلى الصفحة الرئيسية",
       "whatsapp": {
         "title": "واتساب",
         "desc": "اتصل بنا على واتساب للحصول على ردود سريعة",
